public/index.css
body {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  color: #666;
}
.btn {
  box-sizing: border-box;
  padding: 6px 12px;
  margin-bottom: 0;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.42857143;
  text-align: center;
  white-space: nowrap;
  vertical-align: middle;
  -ms-touch-action: manipulation;
  touch-action: manipulation;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-image: none;
  border: 1px solid transparent;
  border-radius: 4px;
}
.clock {
  position: absolute;
  width: 100%;
  top: 35%;
  transform: translateY(-50%);
  padding: 6px 12px;
  text-align: center;
  margin: 0 auto;
}
#restartBig {
  position: absolute;
  left: 50%;
  bottom: 0%;
  transform: translateX(-50%);
  text-align: center;
}
@media screen and (min-width : 1025px) /* Desktop */
{
  .huge {
    font-size: 300px;
  }
  .medium {
    font-size: 18px;
    line-height: 1.3333333;
  }
  .small {
    font-size: 12px;
    line-height: 1.5;
  }
}
@media screen and (max-width : 1024px) /* Tablet */
{
  .huge {
    font-size: 300px;
  }
  .medium {
    font-size: 27px;
  }
  .small {
    font-size: 18px;
  }
}
@media screen and (max-width : 768px) /* Phone Landscape/Tablet Portrait */
{
  .huge {
    font-size: 200px;
  }
  .medium {
    font-size: 18px;
  }
  .small {
    font-size: 12px;
  }
}
@media screen and (max-width : 450px) /* Phone Portrait */
{
  .huge {
    font-size: 130px;
  }
  .medium {
    font-size: 13.5px;
    line-height: 1;
  }
  .small {
    font-size: 9px;
    line-height: 1.125;
  }
}

.light #light-dark:after {
  content: "Lights off";
}
.dark #light-dark:after {
  content: "Lights on";
}
.card {
  cursor: pointer;
}
.light .selected .card-svg .card-back {
  stroke:orange;
  stroke-width:10;
}
.dark .selected .card-svg .card-back {
  stroke:orange;
  stroke-width:8;
}
.card-back {
  fill: none;
  stroke-width:10;
  width: 200;
  height: 100;
}
.light .card-back {
  stroke: #BBB;
}
.dark .card-back {
  stroke: #222;
}
.shape {
  stroke-width:4;
}
.light {
  background-color: white;
}
.light .red {
  stroke: red;
  fill: red;
}
.light .green {
  stroke: green;
  fill: green;
}
.light .purple {
  stroke: #5A1398;
  fill: #5A1398;
}
.light .blue {
  stroke: blue;
  fill: blue;
}
.light .yellow {
  stroke: gray;
  fill: gray;
}
.light .orange {
  stroke: darkorange;
  fill: darkorange;
}
.light .open {
  fill: none;
}
svg .stripe.red {
  stroke-width: 0;
}
svg .stripe.green {
  stroke-width: 0;
}
svg .stripe.purple {
  stroke-width: 0;
}

.dark {
  background-color:black;
}
.circle {
  stroke-width: 0;
  r: 11.7;
}
.dark .green {
  stroke: cyan;
  fill: cyan;
}
.dark .purple {
  stroke: magenta;
  fill: magenta;
}
.dark .red {
  stroke: yellow;
  fill: yellow;
}
.dark .blue {
  stroke: #9546CC;
  fill: #9546CC;
}
.dark .yellow {
  stroke: orange;
  fill: orange;
}
.dark .orange {
  stroke: #49BF3D;
  fill: #49BF3D;
}
.dark .open {
  fill: none;
}

.red.striped {
  stroke:url(#red-stripe);
  fill:url(#red-stripe);
}
.green.striped {
  stroke: url(#green-stripe);
  fill: url(#green-stripe) ;
}
.purple.striped {
  stroke: url(#purple-stripe);
  fill: url(#purple-stripe);
}
@-moz-document url-prefix() { 
  .red.striped {
    stroke:url(/#red-stripe);
    fill:url(/#red-stripe);
  }
  .green.striped {
    stroke: url(/#green-stripe);
    fill: url(/#green-stripe) ;
  }
  .purple.striped {
    stroke: url(/#purple-stripe);
    fill: url(/#purple-stripe);
  }
}
.light .green.striped {
  stroke: green;
}
.light .red.striped {
  stroke: red;
}
.light .purple.striped {
  stroke: #5A1398;
}



.modal {
    display: none; /* Hidden by default */
    position: fixed; /* Stay in place */
    z-index: 1; /* Sit on top */
    left: 0;
    top: 0;
    width: 100%; /* Full width */
    height: 100%; /* Full height */
    overflow: auto; /* Enable scroll if needed */
}

/* Modal Content/Box */
.modal-content {
    margin: 15% auto; /* 15% from the top and centered */
    padding: 20px;
    border: 1px solid #888;
    width: 80%; /* Could be more or less, depending on screen size */
    background-color: 000000;
}

/* The Close Button */
.close {
    color: #aaa;
    float: right;
    font-size: 28px;
    font-weight: bold;
}

.close:hover,
.close:focus {
    color: black;
    text-decoration: none;
    cursor: pointer;
}

